2018.xx.xx, Version 1.2.0 (Stable)

  * Typo in List mi/ma exception.

  * Do not allow duplicate names in lower or upper case.

  * Added export to Java for the jleri module.

2017.06.23, Version 1.1.8 (Stable)

  * Rename cleri_object_t to cleri_t.

2017.06.22, Version 1.1.7 (Stable)

  * Added support for cleri_dup() in export to C. (issue #5)

  * Fixed header guards while exporting to C. (issue #6)

2017.06.20, Version 1.1.6 (Stable)

  * Fixed exporting ref to C. (issue #4)

2017.03.13, Version 1.1.5 (Stable)

  * Fixed exporting keywords (case sensitive) to C.
  * Added export to Go language for the goleri module.

2016.10.25, Version 1.1.4 (Stable)

  * Fixed exporting Tokens to JavaScript and Python. (issue #2)

2016.10.24, Version 1.1.3 (Stable)

  * Added export to Python method. This can be useful even if the source is
    already defined in Python language. (see issue #1)

2016.07.02, Version 1.1.2 (Stable)

  * Fixed export_c() to support Ref(). An update to cleri is not needed since
    in C we can simply pre-define a variable and later assign the actual
    object.

2016.03.07, Version 1.1.0 (BETA)

  * Added Ref() support which can be used to create forward references.
  * Updated jsleri to support Ref() and updated export_js() method to support
    this new class.