@@ -6,6 +6,8 @@
 
   * Added export to Java for the jleri module.
 
+  * Fixed type indentation.
+
 2017.06.23, Version 1.1.8 (Stable)
 
   * Rename cleri_object_t to cleri_t.
